--- a/csscheatsheet/csscheatsheetstyle/stil.css
+++ b/csscheatsheet/csscheatsheetstyle/stil.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 body{
     background-color: purple;
     color:aqua;
@@ -8,5 +13,96 @@ body{
     font: bold 16px Arial, Helvetica, sans-serif;
     */
     line-height: 1.6em;
+
+    .container{
+        margin-right: 50px;
+        padding: 30px;
+    }
+
+    .box-1{
+        background-color: black;
+        color: black;
+        border-right: 5px red solid;
+        padding-left: 20px;
+    }
+
+    .box-1 h1{
+        font-family: Tahoma;
+        font-weight: 800;
+        font-style: italic;
+        text-decoration: underline;
+        text-transform: uppercase;
+        letter-spacing: 0ch;
+        word-spacing: normal;
+
+    }
+
+    .box-2{
+        background-color: beige;
+    }
+
+    .catagories{
+        border: 1px black solid;
+
+    }
+
+    .catagories h1{
+        text-align: center;
+    }
+
+    .catagories ul{
+        list-style: circle;
+        padding-left: 20px;
+    }
+
+    a{
+        text-align: right;
+        text-decoration: none;
+        text-shadow: 20px;
+
+    }
+
+    a:hover{
+        color:brown;
+
+    }
+
+    a:active{
+        color: greenyellow;
+
+    }
+
+    a:visited{
+        color: darkmagenta;
+
+    }
+
+    .catagories li{
+        list-style-image: url('../images/check.png');
+    }
+
+    .my-form{
+
+        padding: 50px;
+    }
+
+    .my-form .form-group{
+        padding-bottom: 30px;
+    }
+
+    .my-form label{
+        display: block;
+    }
+
+    .my-form input[type="text"], .my-form textarea{
+        width: 50px;
+        padding: 20px;
+    }
+
+    .my-form input[type="submit"]{
+        background-color: aqua;
+        color: #fff;
+        padding: 
+    }
 
 }
