--- a/redoOfFirstBigProject/stylesheet/style.css
+++ b/redoOfFirstBigProject/stylesheet/style.css
@@ -58,6 +58,22 @@ nav{
     background-size: contain;
 }
 
+#about-us{
+    padding: 20px;
+    background-color: grey;
+}
+
+#about-us p{
+    color: navy;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+#about-us h2{
+    color: green;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 /* footer */
 
 .footer{
@@ -133,6 +149,20 @@ nav{
     align-items: center;
 }
 
+.footer-news-letter h3{
+    font-size: medium;
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: whitesmoke;
+    position: relative;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+.footer-news-letter{
+    display: flex;
+}
+
 @media(max-width:768px){
 
     body{
@@ -176,8 +206,14 @@ nav{
     }
 
     .footer-column{
-        width: 25%;
+        width: 40%;
         padding: 0 15px;
+    }
+
+    .footer-news-letter{
+        width: auto;
+        padding: 0 15px;
+        align-items: center;
     }
 }
 
